--- a/miniblog_/.air.toml
+++ b/miniblog_/.air.toml
@@ -7,11 +7,11 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o tmp/miniblog -v cmd/miniblog/main.go"
+cmd = "make build"
 # Binary file yields from `cmd`.
-bin = "tmp/miniblog"
+bin = "_output/miniblog"
 # Customize binary, can setup environment variables when run your app.
-full_bin = "APP_ENV=dev APP_USER=air ./tmp/miniblog"
+full_bin = "APP_ENV=dev APP_USER=air ./_output/miniblog"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
